syntax = "proto3";

package stats.service.dashboard;

option java_package = "ru.practicum.ewm.stats.proto";
option java_multiple_files = true;

import "stats/messages/recommendations.proto";

service RecommendationsController {

  rpc GetRecommendationsForUser(UserPredictionsRequestProto)
      returns (stream RecommendedEventProto);

  rpc GetSimilarEvents(SimilarEventsRequestProto)
      returns (stream RecommendedEventProto);

  rpc GetInteractionsCount(InteractionsCountRequestProto)
      returns (stream RecommendedEventProto);
}